# eduEventTracer

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
client/: CMakeLists.txt  cl_run  client.cpp  client.h  debugee.h  event_provider.cpp  event_provider.h  event_provider.xxx  main.cpp
client/include/: event_provider.h
example/: CMakeLists.txt  main.cpp  test_app
protocol/: CMakeLists.txt  buff_dump.cpp  dispatcher.cpp  endpoint.cpp  endpoint.h  linux_socket.cpp  protocol.cpp  protocol.h  socket.h
protocol/include/: buffer.h  defines.h  dispatcher.h  endpoint.h  protocol.h  socket.h
server/: CMakeLists.txt  event_collector.cpp  event_collector.h  main.cpp  server.cpp  server.h  sv_run
server/console/: CMakeLists.txt  run
server/lib/: CMakeLists.txt  event_collector.cpp  server.cpp
server/lib/include/: event_collector.h
server/ui/: CMakeLists.txt  imgui.ini  imgui_log.txt  main.cpp  sv_ui
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  event_provider.cpp  out.txt
src/client/console/: CMakeLists.txt  main.cpp
src/client/include/: client.h  event_provider.h
src/client/lib/: CMakeLists.txt  client.cpp  event_collector.cpp
src/client/lib/include/: client.h  event_collector.h
src/client/ui/: App.cpp  App.h  CMakeLists.txt  ThreadsPanel.cpp  ThreadsPanel.h  ThreadsView.cpp  ThreadsView.h  TimeLine.cpp  TimeLine.h  client_ui  imgui.ini  main.cpp  struct_draw.cpp  struct_draw.h
src/example/: CMakeLists.txt  main.cpp  test_app
src/imgui/: cscope.out  imgui.ini  opengl3_example
src/protocol/: CMakeLists.txt  MessageHub.cpp  buff_dump.cpp  dispatcher.cpp  endpoint.cpp  linux_socket.cpp  pb_generate.sh  protocol.cpp  protocol.pb.cc  utills.cpp
src/protocol/include/: MessageHub.h  buffer.h  defines.h  dispatcher.h  endpoint.h  protocol.h  protocol.pb.h  protocol.proto  socket.h  utills.h
src/server/: CMakeLists.txt  event_provider.cpp  server.cpp
src/server/console/: CMakeLists.txt  run
src/server/include/: event_provider.h  server.h  timer.h
src/server/lib/: CMakeLists.txt  event_collector.cpp  server.cpp
src/server/lib/include/: event_collector.h  server.h
src/server/ui/: App.cpp  CMakeLists.txt  TimeLine.cpp  TimeLine.h  imgui.ini  main.cpp  sv_ui
